--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.10.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "font-awesome-icons": "^1.6.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
